--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
@@ -221,4 +221,17 @@
             <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布" />
         </div>
     </div>
+    <div id="editDZWindow" >
+        <div id="editImgHead">
+            <span>新增地址</span>
+            <div id="div_dz_close"></div>
+        </div>
+        <div id="canvasFrame">
+            <div style="width:785px;height:435px;border:1px solid gray" id="container"></div>
+            <div style="position:absolute; top:6px; left:6px;">
+                <input class="input_dtss" id="input_dtss" type="text" placeholder="请输入地址，如：福州市鼓楼区东大路92号" />
+                <input class="btn_dtss" type="button" id="btn_dtss" />
+            </div>
+        </div>
+    </div>
 }
