--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -16,10 +16,10 @@
 /*首页_主体*/
 .div_body{display: block;width: 1200px;height: 1000px;}
 /*首页_主体_左部*/
-.div_body .div_body_left{display: inline-block;width: 880px;border: 1px solid #cccccc;border-radius: 2px;height: 2500px;background-color: #ffffff;float: left;padding: 10px;}
+.div_body .div_body_left{display: inline-block;width: 880px;border: 1px solid #cccccc;border-radius: 2px;height: 3600px;background-color: #ffffff;float: left;padding: 10px;}
 /*首页_主体_左部_标题*/
 .div_body .div_body_left .div_body_left_head{ height: 120px;width: 100%;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_left .div_body_left_head .p_div_body_left_head_bt{ display: block;font-size: 20px;font-weight: 700;height: 40px;padding: 10px;}
+.div_body .div_body_left .div_body_left_head .p_div_body_left_head_bt{ display: block;font-size: 25px;font-weight: 700;height: 40px;padding: 10px;}
 .div_body .div_body_left .div_body_left_head .p_div_body_left_head_ll{ display: block;color: #999999;height: 40px;padding: 10px;}
 /*首页_主体_左部_信息主要内容*/
 .div_body .div_body_left .div_body_left_body{ width: 100%;height: 470px;margin-top: 20px;}
@@ -62,6 +62,10 @@
 .div_body .div_body_left .div_body_left_body_xqxx{ height: 500px;}
 .div_body .div_body_left .div_body_left_body_xqxx .p_body_left_body_xqxx{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
 .div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx {}
-.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx { width: 400px;float: left;}
+.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx { width: 400px;float: left;height: 30px;}
+.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx .span_body_left_body_xqxx_left{display: inline-block;width: 100px;font-size: 16px;text-align: right;color: #999999;}
+.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx .span_body_left_body_xqxx_right{ text-align: left;font-size: 16px;}
+.div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx{ width: 840px;height: 340px;}
+
 
 .div_body .div_body_right{float: left;display: inline-block;border-radius: 2px;width: 300px;height: 1000px;margin-left: 20px;}
