--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
@@ -221,46 +221,47 @@
                 <p class="p_body_left_body_xqxx">小区信息</p>
                 <ul class="ul_body_left_body_xqxx">
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
+                        <span class="span_body_left_body_xqxx_left">小区名：</span>
                         <span class="span_body_left_body_xqxx_right">世欧王庄</span>
                     </li>
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
-                        <span class="span_body_left_body_xqxx_right">世欧王庄</span>
+                        <span class="span_body_left_body_xqxx_left">开发商：</span>
+                        <span class="span_body_left_body_xqxx_right">世欧地产</span>
                     </li>
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
-                        <span class="span_body_left_body_xqxx_right">世欧王庄</span>
+                        <span class="span_body_left_body_xqxx_left">物业公司：</span>
+                        <span class="span_body_left_body_xqxx_right">天泽物业</span>
                     </li>
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
-                        <span class="span_body_left_body_xqxx_right">世欧王庄</span>
+                        <span class="span_body_left_body_xqxx_left">物业类型：</span>
+                        <span class="span_body_left_body_xqxx_right">普通住宅</span>
                     </li>
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
-                        <span class="span_body_left_body_xqxx_right">世欧王庄</span>
+                        <span class="span_body_left_body_xqxx_left">总建面积：</span>
+                        <span class="span_body_left_body_xqxx_right">156423平方米（大型小区）</span>
                     </li>
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
-                        <span class="span_body_left_body_xqxx_right">世欧王庄</span>
+                        <span class="span_body_left_body_xqxx_left">总户数：</span>
+                        <span class="span_body_left_body_xqxx_right">846户</span>
                     </li>
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
-                        <span class="span_body_left_body_xqxx_right">世欧王庄</span>
+                        <span class="span_body_left_body_xqxx_left">建筑年代：</span>
+                        <span class="span_body_left_body_xqxx_right">2006-02</span>
                     </li>
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
-                        <span class="span_body_left_body_xqxx_right">世欧王庄</span>
+                        <span class="span_body_left_body_xqxx_left">容积率：</span>
+                        <span class="span_body_left_body_xqxx_right">2.0</span>
                     </li>
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
-                        <span class="span_body_left_body_xqxx_right">世欧王庄</span>
+                        <span class="span_body_left_body_xqxx_left">停车位：</span>
+                        <span class="span_body_left_body_xqxx_right">120</span>
                     </li>
                     <li class="li_body_left_body_xqxx">
-                        <span class="span_body_left_body_xqxx_left">小区名</span>
-                        <span class="span_body_left_body_xqxx_right">世欧王庄</span>
+                        <span class="span_body_left_body_xqxx_left">绿化率：</span>
+                        <span class="span_body_left_body_xqxx_right">25%（绿化率适中）</span>
                     </li>
                 </ul>
+                <div class="div_body_left_body_xqxx_dtxx"></div>
             </div>
             <div class="div_body_right">
 
