--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -59,13 +59,18 @@
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .li_body_left_body_fyxq_xx{ width: 360px;height: 260px;margin-right: 10px;margin-bottom: 10px;float: left;}
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .img_body_left_body_fyxq_xx{ width: 360px;height: 260px;}
 
-.div_body .div_body_left .div_body_left_body_xqxx{ height: 500px;}
+.div_body .div_body_left .div_body_left_body_xqxx{ height: 620px;}
 .div_body .div_body_left .div_body_left_body_xqxx .p_body_left_body_xqxx{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx {}
+.div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx { width: 100%;height: 150px;}
 .div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx { width: 400px;float: left;height: 30px;}
 .div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx .span_body_left_body_xqxx_left{display: inline-block;width: 100px;font-size: 16px;text-align: right;color: #999999;}
 .div_body .div_body_left .div_body_left_body_xqxx .ul_body_left_body_xqxx .li_body_left_body_xqxx .span_body_left_body_xqxx_right{ text-align: left;font-size: 16px;}
-.div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx{ width: 840px;height: 340px;}
+.div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx{ width: 780px;height: 340px;}
+.div_body .div_body_left .div_body_left_body_xqxx .div_body_left_body_xqxx_dtxx .p_body_left_body_xqxx_dtxx{ height: 40px;color: #999;padding: 6px 20px;font-size: 18px;background-color: rgba(204,204,204,0.3);}
+
+.div_body .div_body_left .div_body_left_body_gxq{ height: 500px;}
+.div_body .div_body_left .div_body_left_body_gxq .p_body_left_body_gxq{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
+
 
 
 .div_body .div_body_right{float: left;display: inline-block;border-radius: 2px;width: 300px;height: 1000px;margin-left: 20px;}
