--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
@@ -22,38 +22,8 @@
     </div>
     <div id="divBody" class="div_body">
         <div id="div_body_left" class="div_body_left">
-            <div class="div_body_left_head">
-                <p class="p_div_body_left_head_bt">大儒世家新出精装2房 高层设备齐全 别墅社区 品质 </p>
-                <p class="p_div_body_left_head_ll">11月5日 22:36 3次浏览 </p>
-            </div>
-            <div class="div_body_left_body">
-                <div class="div_body_left_body_left">
-                    <img class="img_body_left_body_left_show" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")" />
-                    <ul class="ul_body_left_body_left_list">
-                        <li class="li_body_left_body_left_list_an" style='margin-right: 10px;'>
-                            <
-                        </li>
-                        <li class="li_body_left_body_left_list_tp">
-                            <img class="img_body_left_body_left_list_tp" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")" />
-                            <div class="div_img_body_left_body_left_list_tp"></div>
-                        </li>
-                        <li class="li_body_left_body_left_list_tp">
-                            <img class="img_body_left_body_left_list_tp" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")" />
-                            <div class="div_img_body_left_body_left_list_tp"></div>
-                        </li>
-                        <li class="li_body_left_body_left_list_tp">
-                            <img class="img_body_left_body_left_list_tp" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")" />
-                            <div class="div_img_body_left_body_left_list_tp"></div>
-                        </li>
-                        <li class="li_body_left_body_left_list_tp">
-                            <img class="img_body_left_body_left_list_tp" src="@Url.Content("~/Areas/Business/Css/images/test.jpg")" />
-                            <div class="div_img_body_left_body_left_list_tp"></div>
-                        </li>
-                        <li class="li_body_left_body_left_list_an">
-                            >
-                        </li>
-                    </ul>
-                </div>
+           
+            @*
                 <div class="div_body_left_body_right">
                     <p class="p_body_left_body_right_first">
                         <span class="span_body_left_body_right_zj">1800</span><span class="span_body_left_body_right_zjdw">元/月</span>
@@ -273,7 +243,7 @@
             </div>
             <div class="div_body_right">
 
-            </div>
+            </div>*@
         </div>
     </div>
 }
