--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
@@ -20,11 +20,13 @@
 .div_head_right .span_fbxx {width: 180px;border: 1px solid #5bc0de;height: 40px;background: #5bc0de;float: left;display: inline-block;color: #fff;font-size: 16px;padding-top: 6px;text-align: center;cursor: pointer;margin-top: 10px;margin-left: 10px;}
 .div_head_right .span_fbxx:hover {background: #31b0d5;}
 
+/*首页_头部_导航*/
 .div_nav { width: 1200px;height: 28px;display: block;}
 .div_nav .ul_nav { width: 100%;padding: 0;}
 .div_nav .ul_nav .li_nav_font{ float: left;font-size: 13px;}
 .div_nav .ul_nav .li_nav_split{ float: left;margin-left: 10px;margin-right: 10px;}
 
+/*首页_头部_查询条件*/
 .div_condition{background-color: #ffffff;display: block;width: 1200px;height: 180px;border: 1px solid #cccccc;}
 .div_condition .ul_condition_head{display: block;width: 100%;height: 40px;padding: 0;}
 .div_condition .ul_condition_head .li_condition_head{display: inline-block;float: left;text-align: center;color: #999999;font-size: 16px;width: 100px;height: 40px;padding: 8px 10px;background-color: #eeeff1;cursor: pointer;}
@@ -41,11 +43,13 @@
 .div_condition_select .ul_condition_select .li_condition_select:hover{ cursor: pointer;background-color: #eeeff1;}
 .div_condition_select .ul_condition_select .li_condition_select em{ margin-left: 10px;color: #999999;}
 
+/*首页_主体_头部*/
 .div_body{display: block;width: 1200px;height: 1800px;margin-top: 20px;background-color: #ffffff;}
 .div_body .ul_body_head {height: 40px;display: block;padding: 0;width: 100%;border-bottom: 1px solid #cccccc;}
 .div_body .ul_body_head .li_body_head {text-align: center;color: #999999;height: 40px;font-size: 16px;float: left;display: inline-block;padding: 6px 20px;}
 .div_body .ul_body_head .li_body_head:hover{ cursor: pointer;}
 
+/*首页_主体_左部*/
 .div_body .div_body_left{display: inline-block;width: 980px;height: 1760px;background-color: #ffffff;float: left;}
 .div_body .div_body_left .ul_body_left{ width: 100%;padding: 0;}
 .div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 180px;border-bottom: 1px solid #e6e6e6;padding: 10px;}
@@ -64,6 +68,14 @@
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .p_li_body_left_right{color: #ef6100;font-size: 16px;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .p_li_body_left_right .span_zj{font-size: 28px;font-weight: 700;margin-right: 5px;}
 
+/*首页_主体_左部_分页*/
+.div_body .div_body_left .div_main_info_bottom {background-color: #fff;text-align: center;height: 38px;color: #333;font-size: 14px;font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;padding-left: 10px;padding-top: 8px;}
+.div_body .div_body_left .div_main_info_bottom .div_main_info_bottom_fy { width: 100%;}
+.div_body .div_body_left .div_main_info_bottom .div_main_info_bottom_fy .a_main_info_bottom_fy {line-height: 18px;cursor: pointer;text-decoration: none;font-size: 16px;background-color: #ffffff;border: 1px solid #dee3e7;padding: 10px 10px;display: inline-block;margin: 0 6px;color: #333;}
+.div_body .div_body_left .div_main_info_bottom .div_main_info_bottom_fy .a_main_info_bottom_fy:hover {background-color: #5bc0de;text-decoration: none;color: #ffffff;}
+.div_body .div_body_left .div_main_info_bottom .div_main_info_bottom_fy .a_main_info_bottom_fy_current {background-color: #5bc0de;color: #ffffff;}
+
+/*首页_主体_右部*/
 .div_body .div_body_right{display: inline-block;width: 200px;height: 1760px;}
 .div_body .div_body_right .p_div_body_right{ font-size: 18px;float: left;display: block;margin-left: 18px;}
 .div_body .div_body_right .ul_body_right{height: 100%;width: 100%;padding: 0;}
@@ -73,15 +85,3 @@
 .div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_xq{ width: 100%;height: 20px;display: block;margin-bottom: 2px;font-size: 12px;}
 .div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_cs{ width: 100%;height: 20px;display: block;color: #999999;margin-bottom: 2px;font-size: 13px;}
 .div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_jg{width: 100%;height: 20px;display: block;color: #ef6100;font-size: 16px;margin-bottom: 2px;}
-
-
-.div_main_info_bottom {background-color: #fff;text-align: center;height: 38px;color: #333;font-size: 14px;font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;padding-left: 10px;padding-top: 8px;}
-
-.span_main_info_bottom {font-size: 12px;margin-left: 8px;margin-top: 2px;float: left;}
-
-.div_main_info_bottom_fy {}
-
-.a_main_info_bottom_fy {line-height: 18px;cursor: pointer;text-decoration: none;font-size: 16px;background-color: #ffffff;border: 1px solid #dee3e7;padding: 10px 10px;display: inline-block;margin: 0 6px;color: #333;}
-.a_main_info_bottom_fy:hover {background-color: #5bc0de;text-decoration: none;color: #ffffff;}
-.a_main_info_bottom_fy_current {background-color: #5bc0de;color: #ffffff;}
-
