--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -90,7 +90,7 @@
 /*首页_主体_右部*/
 .div_body .div_body_right{float: left;display: inline-block;border-radius: 2px;width: 300px;height: 1000px;margin-left: 20px;}
 /*首页_主体_右部_个人信息*/
-.div_body .div_body_right .div_body_right_grxx{ width: 100%;height: 400px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;text-align: center;}
+.div_body .div_body_right .div_body_right_grxx{ width: 100%;height: 400px;margin-bottom: 20px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;text-align: center;}
 .div_body .div_body_right .div_body_right_grxx .img_div_body_right_grxx{ border-radius: 50%;width: 125px;height: 125px;margin-top: 10px;}
 .div_body .div_body_right .div_body_right_grxx .p_div_body_right_yhm{ font-size: 20px;font-weight: 700;margin-top: 10px;}
 .div_body .div_body_right .div_body_right_grxx .p_div_body_right_zcsj{ color: #999999;text-align: center;margin-top: 10px;height: 35px;border-bottom: 1px solid #cccccc;}
@@ -100,6 +100,15 @@
 .div_body .div_body_right .div_body_right_grxx .div_div_body_right_yyzz .div_div_div_body_right_yyzz .i_div_div_body_right_yyzz_sfz{ background: url(../images/xxxx/gy/xxxx_gy_sfz.png);}
 .div_body .div_body_right .div_body_right_grxx .div_div_body_right_yyzz .div_div_div_body_right_yyzz .i_div_div_body_right_yyzz_yyzz{ background: url(../images/xxxx/gy/xxxx_gy_yyzz.png);}
 .div_body .div_body_right .div_body_right_grxx .div_div_body_right_yyzz .div_div_div_body_right_yyzz .i_div_div_body_right_yyzz_zmxy{ background: url(../images/xxxx/gy/xxxx_gy_zmxy.png);}
-.div_body .div_body_right .div_body_right_grxx .div_div_body_right_ckxy{ width: 260px;height: 34px;padding: 6px 12px;color: #333;margin-top: 30px;background: #eeeff1;border: 1px solid #cccccc;border-radius: 2px;}
+.div_body .div_body_right .div_body_right_grxx .div_div_body_right_ckxy{ width: 260px;height: 34px;padding: 6px 12px;color: #333;margin-top: 30px;background-color: rgba(238,239,241,0.2);border: 1px solid #cccccc;border-radius: 2px;}
+.div_body .div_body_right .div_body_right_grxx .div_div_body_right_ckxy:hover{ cursor: pointer;background-color: rgba(238,239,241,0.8);}
 /*首页_主体_右部_该经纪人推荐*/
-.div_body .div_body_right .div_body_right_jjrtj{ width: 100%;height: 600px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;text-align: center;}
+.div_body .div_body_right .div_body_right_jjrtj{ width: 100%;height: 600px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
+.div_body .div_body_right .div_body_right_jjrtj .p_body_right_jjrtj{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
+.div_body .div_body_right .ul_body_right_jjrtj{ padding: 0;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj{width: 258px;height: 210px;border: 1px solid #e6e6e6;padding: 8px;display: block;margin-bottom: 10px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj:hover{ cursor: pointer;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .img_li_body_right_jjrtj{ height: 120px;width: 100%;margin-bottom: 10px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .p_li_body_left_right_xq{ width: 100%;height: 20px;display: block;margin-bottom: 2px;font-size: 12px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .p_li_body_right_cs{ width: 100%;height: 20px;display: block;color: #999999;margin-bottom: 2px;font-size: 13px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .p_li_body_right_jjrtj_jg{width: 100%;height: 20px;display: block;color: #ef6100;font-size: 16px;margin-bottom: 2px;}
