--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FCXX_ZZF.cshtml
@@ -23,21 +23,7 @@
     <div id="divBody" class="div_body">
         <div id="div_body_left" class="div_body_left">
         </div>
-        <div class="div_body_right">
-            <div class="div_body_right_grxx">
-                <img class="img_div_body_right_grxx" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/GRZL/TX.jpg?j=0.3236891655295969"/>
-                <p class="p_div_body_right_yhm">小百姓170914405052</p>
-                <p class="p_div_body_right_zcsj">注册时间：2017年9月14日</p>
-                <div class="div_div_body_right_yyzz">
-                    <div class="div_div_div_body_right_yyzz"><i class="i_div_div_body_right_yyzz_sfz"></i><span>身份证</span></div>
-                    <div class="div_div_div_body_right_yyzz"><i class="i_div_div_body_right_yyzz_yyzz"></i><span>营业执照</span></div>
-                    <div class="div_div_div_body_right_yyzz"><i class="i_div_div_body_right_yyzz_zmxy"></i><span>芝麻信用</span></div>
-                </div>
-                <div class="div_div_body_right_ckxy">查看TA的信用记录</div>
-            </div>
-            <div class="div_body_right_jjrtj">
-                
-            </div>
-            </div>
+        <div id="div_body_right" class="div_body_right">
+        </div>
     </div>
 }
