--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -103,7 +103,7 @@
 .div_body .div_body_right .div_body_right_grxx .div_div_body_right_ckxy{ width: 260px;height: 34px;padding: 6px 12px;color: #333;margin-top: 30px;background-color: rgba(238,239,241,0.2);border: 1px solid #cccccc;border-radius: 2px;}
 .div_body .div_body_right .div_body_right_grxx .div_div_body_right_ckxy:hover{ cursor: pointer;background-color: rgba(238,239,241,0.8);}
 /*首页_主体_右部_该经纪人推荐*/
-.div_body .div_body_right .div_body_right_jjrtj{ width: 100%;height: 500px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
+.div_body .div_body_right .div_body_right_jjrtj{ width: 100%;height: 500px;float: right;margin-bottom: 20px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
 .div_body .div_body_right .div_body_right_jjrtj .p_body_right_jjrtj{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
 .div_body .div_body_right .ul_body_right_jjrtj{ padding: 0;height: 180px;width: 280px;}
 .div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj{ width: 100%;display: block;height: 70px;margin-bottom: 15px;}
@@ -113,8 +113,8 @@
 .div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_cs{ font-size: 12px;display: block;font-size: 12px;color: #999999}
 .div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_jg{ color: #ef6100;font-size: 12px;display: block;}
 
-.div_body .div_body_right .div_body_right_xglm{ width: 100%;height: 500px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
+.div_body .div_body_right .div_body_right_xglm{ width: 100%;height: 300px;float: right;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
 .div_body .div_body_right .div_body_right_xglm .p_body_right_xglm{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_right .ul_body_right_xglm{ padding: 0;height: 180px;width: 280px;}
-.div_body .div_body_right .ul_body_right_xglm .li_body_right_jjrtj{ width: 100%;display: block;height: 70px;margin-bottom: 15px;}
-.div_body .div_body_right .ul_body_right_xglm .li_body_right_jjrtj .img_li_body_right_jjrtj{ width: 70px;height: 70px;display: inline-block;float: left; }
+.div_body .div_body_right .ul_body_right_xglm{ padding: 0;height: 110px;width: 280px; }
+.div_body .div_body_right .ul_body_right_xglm .li_body_right_xglm{ width: 140px;display: inline-block;margin-bottom: 10px;color: #333333;}
+.div_body .div_body_right .div_body_right_xglm .em_body_right_xglm{ height: 1px;width: 260px;margin-top: 10px;margin-bottom: 10px;display: block;background-color: #cccccc;}
