--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -26,7 +26,8 @@
 .div_body .div_body_left .div_body_left_body_left{ width: 470px;height: 475px;float: left;}
 .div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show{ width: 460px;height: 350px;}
 .div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show:hover{ cursor: pointer;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list{ width: 400px;height: 76px;padding: 0;margin-top: 10px;float: left;}
+.div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list{ width: 400px;overflow: hidden;display: inline-block;float: left;}
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list{ width: auto;overflow: hidden;height: 76px;padding: 0;margin-top: 10px;float: left;}
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list_an{float: left;height: 76px;width: 25px;font-size: 20px;margin-top: 10px;background-color: rgba(0, 0, 0, 0.3);color: #ffffff;padding: 25px 5px;}
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list_an:hover{ cursor: pointer;background-color: rgba(0, 0, 0, 0.6);}
 .div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp{float: left;height: 76px;margin-right: 10px;width: 90px;position: relative;}
@@ -106,10 +107,11 @@
 .div_body .div_body_right .div_body_right_jjrtj{ width: 100%;height: 500px;float: right;margin-bottom: 20px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
 .div_body .div_body_right .div_body_right_jjrtj .p_body_right_jjrtj{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
 .div_body .div_body_right .ul_body_right_jjrtj{ padding: 0;height: 180px;width: 280px;}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj{ width: 100%;display: block;height: 70px;margin-bottom: 15px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj{ width: 260px;display: block;height: 70px;margin-bottom: 15px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj:hover{ cursor: pointer;}
 .div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .img_li_body_right_jjrtj{ width: 70px;height: 70px;display: inline-block;float: left; }
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj{ width: 200px;height: 70px;display: inline-block;float: right; }
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_xq{ width: 210px;font-size: 12px;}
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj{ width: 170px;height: 70px;display: inline-block;float: right; }
+.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_xq{ font-size: 12px;}
 .div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_cs{ font-size: 12px;display: block;font-size: 12px;color: #999999}
 .div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_jg{ color: #ef6100;font-size: 12px;display: block;}
 
@@ -117,4 +119,5 @@
 .div_body .div_body_right .div_body_right_xglm .p_body_right_xglm{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
 .div_body .div_body_right .ul_body_right_xglm{ padding: 0;height: 110px;width: 280px; }
 .div_body .div_body_right .ul_body_right_xglm .li_body_right_xglm{ width: 140px;display: inline-block;margin-bottom: 10px;color: #333333;}
+.div_body .div_body_right .ul_body_right_xglm .li_body_right_xglm:hover{ cursor: pointer;text-decoration: underline;color: #ef6100;}
 .div_body .div_body_right .div_body_right_xglm .em_body_right_xglm{ height: 1px;width: 260px;margin-top: 10px;margin-bottom: 10px;display: block;background-color: #cccccc;}
