--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -27,7 +27,7 @@
 .div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show{ width: 460px;height: 350px;}
 .div_body .div_body_left .div_body_left_body_left .img_body_left_body_left_show:hover{ cursor: pointer;}
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list{ width: 400px;overflow: hidden;display: inline-block;float: left;}
-.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list{ width: auto;overflow: hidden;height: 76px;padding: 0;margin-top: 10px;float: left;}
+.div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list{width: 2000px;height: 76px;padding: 0;margin-top: 10px;float: left;}
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list_an{float: left;height: 76px;width: 25px;font-size: 20px;margin-top: 10px;background-color: rgba(0, 0, 0, 0.3);color: #ffffff;padding: 25px 5px;}
 .div_body .div_body_left .div_body_left_body_left .div_body_left_body_left_list_an:hover{ cursor: pointer;background-color: rgba(0, 0, 0, 0.6);}
 .div_body .div_body_left .div_body_left_body_left .ul_body_left_body_left_list .li_body_left_body_left_list_tp{float: left;height: 76px;margin-right: 10px;width: 90px;position: relative;}
