--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -48,7 +48,7 @@
 /*首页_主体_左部_房源详情*/
 .div_body .div_body_left .div_body_left_body_fyxq{ height: 1500px;}
 .div_body .div_body_left .div_body_left_body_fyxq .p_body_left_body_fyxq{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx{ height: 30px;width: 100%;display: block;margin-left: 20px;margin-bottom: 30px;float: left;}
+.div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx{ height: auto;width: 100%;display: block;margin-left: 20px;margin-bottom: 30px;float: left;}
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .div_body_left_body_fyxq_xx_left{ font-size: 16px;float: left;}
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .div_body_left_body_fyxq_xx_right{ margin-left: 20px;color: #666666;float: left;}
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .div_body_left_body_fyxq_xx_right .span_body_left_body_fyxq_xx_right_fwld{width: 96px;text-align: center;display: inline-block;}
@@ -57,8 +57,10 @@
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .div_body_left_body_fyxq_xx_right .span_body_left_body_fyxq_xx_right .span_img_body_left_body_fyxq_xx_right{width: 96px;text-align: center;display: block;}
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .fyms{width:650px}
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .ul_body_left_body_fyxq_xx{ width: 740px;padding: 0;}
-.div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .li_body_left_body_fyxq_xx{ width: 360px;height: 260px;margin-right: 10px;margin-bottom: 10px;float: left;}
+.div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .li_body_left_body_fyxq_xx{ width: 360px;height: 260px;margin-right: 10px;margin-bottom: 10px;display: inline-block;}
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .img_body_left_body_fyxq_xx{ width: 360px;height: 260px;}
+.div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_zk{padding-top: 10px; width: 730px;height: 48px;text-align: center;float: left;border: 1px solid #cccccc;border-radius: 2px;margin-left: 20px;background-color:rgba(204,204,204,0.2); }
+.div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_zk:hover{background-color:rgba(204,204,204,0.6);cursor: pointer;}
 /*首页_主体_左部_小区详情*/
 .div_body .div_body_left .div_body_left_body_xqxx{ height: 620px;}
 .div_body .div_body_left .div_body_left_body_xqxx .p_body_left_body_xqxx{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
