--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FCXX.css
@@ -59,7 +59,7 @@
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .ul_body_left_body_fyxq_xx{ width: 740px;padding: 0;}
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .li_body_left_body_fyxq_xx{ width: 360px;height: 260px;margin-right: 10px;margin-bottom: 10px;display: inline-block;}
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_xx .img_body_left_body_fyxq_xx{ width: 360px;height: 260px;}
-.div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_zk{padding-top: 10px; width: 730px;height: 48px;text-align: center;float: left;border: 1px solid #cccccc;border-radius: 2px;margin-left: 20px;background-color:rgba(204,204,204,0.2); }
+.div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_zk{padding-top: 10px;display: none; width: 730px;height: 48px;text-align: center;float: left;border: 1px solid #cccccc;border-radius: 2px;margin-left: 20px;background-color:rgba(204,204,204,0.2); }
 .div_body .div_body_left .div_body_left_body_fyxq .div_body_left_body_fyxq_zk:hover{background-color:rgba(204,204,204,0.6);cursor: pointer;}
 /*首页_主体_左部_小区详情*/
 .div_body .div_body_left .div_body_left_body_xqxx{ height: auto;float: left;margin-top: 20px;}
