--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -160,7 +160,7 @@
                 <div id="div_body_middle_left_JY" class="div_body_middle_left_section">
                 </div>
             </div>
-            <div id="div_body_middle_left_4" class="div_body_middle_left">
+            <div id="div_body_middle_left_4" class="div_body_middle_left" style="margin-right: 0px;">
                 <div id="div_body_middle_left_SWFW" class="div_body_middle_left_section">
                 </div>
                 <div id="div_body_middle_left_ES" class="div_body_middle_left_section">
