--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
@@ -148,7 +148,7 @@
                     <div id="divZJTip" class="Warn" style="z-index: 989;"></div>
                 </div>
             </div>
-            <div id="divBHFY" class="div_row" style="z-index: 988; height: 80px; margin-top: -18px;">
+            <div id="divBHFY" class="div_row" style="z-index: 988; margin-top: -18px;">
                 <div class="div_row_left">
                     <span class="span_required"></span>
                     <span id="spanBHFY">包含费用</span>
@@ -164,11 +164,7 @@
                 <div id="divFWPZText" class="div_row_right" style="position: relative">
                 </div>
             </div>
-            <div id="divXXXX" class="div_split" style="z-index: 986; margin-top: 100px;">
-                <span class="span_split">详细信息</span>
-                <em class="em_split"></em>
-            </div>
-            <div id="divFWLD" class="div_row" style="z-index: 985; height: 80px;">
+            <div id="divFWLD" class="div_row" style="z-index: 986;">
                 <div class="div_row_left">
                     <span class="span_required"></span>
                     <span id="spanFWLD">房屋亮点</span>
@@ -176,7 +172,7 @@
                 <div id="divFWLDText" class="div_row_right" style="position: relative">
                 </div>
             </div>
-            <div id="divCZYQ" class="div_row" style="z-index: 984; height: 80px;">
+            <div id="divCZYQ" class="div_row" style="z-index: 985;">
                 <div class="div_row_left">
                     <span class="span_required"></span>
                     <span id="spanCZYQ">出租要求</span>
@@ -184,13 +180,17 @@
                 <div id="divCZYQText" class="div_row_right" style="position: relative">
                 </div>
             </div>
+            <div id="divXXXX" class="div_split" style="z-index: 984;">
+                <span class="span_split">详细信息</span>
+                <em class="em_split"></em>
+            </div>
             <div id="divFYBT" class="div_row" style="margin-top: 22px;">
                 <div class="div_row_left">
                     <span class="span_required">*</span>
                     <span id="spanFYBT">房源标题</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="BT" maxlength="50" column="BT" class="input_input SRK"  type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
+                    <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
                     <div id="divBTTip"></div>
                 </div>
             </div>
