--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "FC_ZZF";
+    ViewBag.Title = "FC_ESF";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
