--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FC/FCXX_DZF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/FC/FCXX_DZF.css
@@ -1,19 +1,4 @@
-﻿body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;}
-
-/*首页_头部*/
-.div_head {background-color: #ffffff;width: 1200px;height: 100px;padding-top: 10px;}
-
-/*首页_头部_左侧*/
-.div_head_left {float: left;width: 120px;margin-top: 5px;}
-.div_head_left .img_head_left_logo {width: 100%;text-align: center;color: white;font-size: 25px;float: left;width: 155px;height: 55px;}
-
-/*首页_导航*/
-.div_nav { width: 1200px;height: 28px;display: block;}
-.div_nav .ul_nav { width: 100%;padding: 0;}
-.div_nav .ul_nav .li_nav_font{ float: left;font-size: 13px;}
-.div_nav .ul_nav .li_nav_split{ float: left;margin-left: 10px;margin-right: 10px;}
-
-/*首页_主体*/
+﻿/*首页_主体*/
 .div_body{display: block;width: 1200px;height: 1000px;}
 /*首页_主体_左部*/
 .div_body .div_body_left{display: inline-block;width: 880px;border: 1px solid #cccccc;border-radius: 2px;height: 3600px;background-color: #ffffff;float: left;padding: 10px;}
@@ -90,36 +75,3 @@
 .div_body .div_body_left .ul_body_left_body_jptj .li_body_left_body_jptj .p_li_body_left_body_jptj_xq{ width: 100%;height: 20px;display: block;margin-bottom: 2px;font-size: 12px;}
 .div_body .div_body_left .ul_body_left_body_jptj .li_body_left_body_jptj .p_li_body_left_body_jptj_cs{ width: 100%;height: 20px;display: block;color: #999999;margin-bottom: 2px;font-size: 13px;}
 .div_body .div_body_left .ul_body_left_body_jptj .li_body_left_body_jptj .p_li_body_left_body_jptj_jg{width: 100%;height: 20px;display: block;color: #ef6100;font-size: 16px;margin-bottom: 2px;}
-/*首页_主体_右部*/
-.div_body .div_body_right{float: left;display: inline-block;border-radius: 2px;width: 300px;height: 1000px;margin-left: 20px;}
-/*首页_主体_右部_个人信息*/
-.div_body .div_body_right .div_body_right_grxx{ width: 100%;height: 400px;margin-bottom: 20px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;text-align: center;}
-.div_body .div_body_right .div_body_right_grxx .img_div_body_right_grxx{ border-radius: 50%;width: 125px;height: 125px;margin-top: 10px;}
-.div_body .div_body_right .div_body_right_grxx .p_div_body_right_yhm{ font-size: 20px;font-weight: 700;margin-top: 10px;}
-.div_body .div_body_right .div_body_right_grxx .p_div_body_right_zcsj{ color: #999999;text-align: center;margin-top: 10px;height: 35px;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_right .div_body_right_grxx .div_div_body_right_yyzz{ height: 60px;}
-.div_body .div_body_right .div_body_right_grxx .div_div_body_right_yyzz .div_div_div_body_right_yyzz{display: inline-block; width: 74px;height: 74px;text-align: center;}
-.div_body .div_body_right .div_body_right_grxx .div_div_body_right_yyzz .div_div_div_body_right_yyzz i{ width: 50px;height: 50px;display: block;margin-left: 12px;}
-.div_body .div_body_right .div_body_right_grxx .div_div_body_right_yyzz .div_div_div_body_right_yyzz .i_div_div_body_right_yyzz_sfz{ background: url(../images/xxxx/gy/xxxx_gy_sfz.png);}
-.div_body .div_body_right .div_body_right_grxx .div_div_body_right_yyzz .div_div_div_body_right_yyzz .i_div_div_body_right_yyzz_yyzz{ background: url(../images/xxxx/gy/xxxx_gy_yyzz.png);}
-.div_body .div_body_right .div_body_right_grxx .div_div_body_right_yyzz .div_div_div_body_right_yyzz .i_div_div_body_right_yyzz_zmxy{ background: url(../images/xxxx/gy/xxxx_gy_zmxy.png);}
-.div_body .div_body_right .div_body_right_grxx .div_div_body_right_ckxy{ width: 260px;height: 34px;padding: 6px 12px;color: #333;margin-top: 30px;background-color: rgba(238,239,241,0.2);border: 1px solid #cccccc;border-radius: 2px;}
-.div_body .div_body_right .div_body_right_grxx .div_div_body_right_ckxy:hover{ cursor: pointer;background-color: rgba(238,239,241,0.8);}
-/*首页_主体_右部_该经纪人推荐*/
-.div_body .div_body_right .div_body_right_jjrtj{ width: 100%;height: 500px;float: right;margin-bottom: 20px;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
-.div_body .div_body_right .div_body_right_jjrtj .p_body_right_jjrtj{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_right .ul_body_right_jjrtj{ padding: 0;height: 180px;width: 280px;}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj{ width: 260px;display: block;height: 70px;margin-bottom: 15px;}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj:hover{ cursor: pointer;}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .img_li_body_right_jjrtj{ width: 70px;height: 70px;display: inline-block;float: left; }
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj{ width: 170px;height: 70px;display: inline-block;float: right; }
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_xq{ font-size: 12px;}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_cs{ font-size: 12px;display: block;font-size: 12px;color: #999999}
-.div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_jg{ color: #ef6100;font-size: 12px;display: block;}
-
-.div_body .div_body_right .div_body_right_xglm{ width: 100%;height: 300px;float: right;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
-.div_body .div_body_right .div_body_right_xglm .p_body_right_xglm{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_right .ul_body_right_xglm{ padding: 0;height: 110px;width: 280px; }
-.div_body .div_body_right .ul_body_right_xglm .li_body_right_xglm{ width: 140px;display: inline-block;margin-bottom: 10px;color: #333333;}
-.div_body .div_body_right .ul_body_right_xglm .li_body_right_xglm:hover{ cursor: pointer;text-decoration: underline;color: #ef6100;}
-.div_body .div_body_right .div_body_right_xglm .em_body_right_xglm{ height: 1px;width: 260px;margin-top: 10px;margin-bottom: 10px;display: block;background-color: #cccccc;}
