--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -7,7 +7,6 @@
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/CXLB/FCCX.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/FCCX/FCCX_ZZF.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
 }
 @section Section_Body {
     <div id="divNav" class="div_nav">
@@ -47,7 +46,7 @@
             </div>
         </div>
         <div class="div_body_right">
-            <p class="p_div_body_right">热推房源</p>
+            <p class="p_div_body_right">热门推荐</p>
             <ul id="ul_body_right" class="ul_body_right">
             </ul>
         </div>
