--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
@@ -27,7 +27,7 @@
 .div_nav .ul_nav .li_nav_split{ float: left;margin-left: 10px;margin-right: 10px;}
 
 /*首页_头部_查询条件*/
-.div_condition{background-color: #ffffff;display: block;width: 1200px;height: 180px;border: 1px solid #cccccc;}
+.div_condition{background-color: #ffffff;display: block;width: 1200px;height: auto;border: 1px solid #cccccc;}
 .div_condition .ul_condition_head{display: block;width: 100%;height: 40px;padding: 0;}
 .div_condition .ul_condition_head .li_condition_head{display: inline-block;float: left;text-align: center;color: #999999;font-size: 16px;width: 100px;height: 40px;padding: 8px 10px;background-color: #eeeff1;cursor: pointer;}
 .div_condition .div_condition_body{ width: 100%;height: 40px;}
@@ -87,3 +87,9 @@
 .div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_xq{ width: 100%;height: 20px;display: block;margin-bottom: 2px;font-size: 12px;}
 .div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_cs{ width: 100%;height: 20px;display: block;color: #999999;margin-bottom: 2px;font-size: 13px;}
 .div_body .div_body_right .ul_body_right .li_body_right .p_li_body_right_jg{width: 100%;height: 20px;display: block;color: #ef6100;font-size: 16px;margin-bottom: 2px;}
+
+.font_size16{ font-size: 16px;}
+.font_size17{ font-size: 17px;}
+.font_size18{ font-size: 18px;}
+.font_size19{ font-size: 19px;}
+.font_size20{ font-size: 20px;}
