--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FC_DZF.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/CXLB/FCCX.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/FCCX/FCCX_SP.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/FCCX/FC_DZF.js")"></script>
 }
 @section Section_Body {
     <div id="divNav" class="div_nav">
@@ -15,7 +15,7 @@
             <li class="li_nav_split">></li>
             <li class="li_nav_font">@ViewData["XZQ"]房产信息</li>
             <li class="li_nav_split">></li>
-            <li class="li_nav_font">@ViewData["XZQ"]整租房</li>
+            <li class="li_nav_font">@ViewData["XZQ"]短租房</li>
         </ul>
     </div>
     <div id="divCondition" class="div_condition">
@@ -32,10 +32,10 @@
     </div>
     <div id="divBody" class="div_body">
         <ul class="ul_body_head">
-            <li class="li_body_head">@ViewData["XZQ"]商铺出租</li>
-            <li class="li_body_head">@ViewData["XZQ"]商铺出售</li>
+            <li class="li_body_head">@ViewData["XZQ"]出租</li>
+            <li class="li_body_head">个人房源</li>
             <li class="li_body_head">经纪人</li>
-            <li class="li_body_head">热门推荐</li>
+            <li class="li_body_head">热租房源</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
             <ul id="ul_body_left" class="ul_body_left">
