--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCXX/FC_ZZF.cshtml
@@ -5,10 +5,8 @@
 @section Section_Head {
     <meta name="viewport" content="width=device-width" />
     <title></title>
-    <link href="@Url.Content("~/Areas/Business/Css/XXXX/FC/FCXX_DZF.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/XXXX/FCXX/FCXX_DZF.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=134db1b9cf1f1f2b4427210932b34dcb"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/XXXX/FC/FCXX_ZZF.css")" rel="stylesheet" />
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/XXXX/FCXX/FC_ZZF.js")"></script>
 }
 @section Section_Body {
     <div id="divNav" class="div_nav">
@@ -17,7 +15,7 @@
             <li class="li_nav_split">></li>
             <li class="li_nav_font">@ViewData["XZQ"]房产信息</li>
             <li class="li_nav_split">></li>
-            <li class="li_nav_font">@ViewData["XZQ"]短租房</li>
+            <li class="li_nav_font">@ViewData["XZQ"]整租房</li>
         </ul>
     </div>
     <div id="divBody" class="div_body">
