--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
@@ -17,6 +17,7 @@
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/Top.js")"></script>
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/Head.js")"></script>
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=134db1b9cf1f1f2b4427210932b34dcb"></script>
     @RenderSection("Section_Head", false)
 }
 @section Section_Body {
