--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_SP.cshtml
@@ -144,7 +144,7 @@
         </div>
         <div id="divMK" class="div_row" style="z-index: 980;">
             <div class="div_row_left" style="margin-left: 128px;">
-                <span class="span_required"></span>
+                <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">面宽</span>
             </div>
             <div class="div_row_right">
@@ -157,7 +157,7 @@
         </div>
         <div id="divJS" class="div_row" style="z-index: 978;">
             <div class="div_row_left" style="margin-left: 128px;">
-                <span class="span_required"></span>
+                <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">进深</span>
             </div>
             <div class="div_row_right">
@@ -170,7 +170,7 @@
         </div>
         <div id="divCG" class="div_row" style="z-index: 976;">
             <div class="div_row_left" style="margin-left: 128px;">
-                <span class="span_required"></span>
+                <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">层高</span>
             </div>
             <div class="div_row_right">
