--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CKCFTDCW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CKCFTDCW.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    ViewBag.Title = "FC_CKCFTDCW";
+    ViewBag.Title = "FC_CFCKTDCW";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
-    <link href="@Url.Content("~/Areas/Business/Css/HTFB/FC/FC_CKCFTDCW.css")" rel="stylesheet"/>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/FC/FC_CKCFTDCW.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/FC/FC_CKCFTDCWYZ.js")"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/HTFB/FC/FC_CFCKTDCW.css")" rel="stylesheet"/>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/FC/FC_CFCKTDCW.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/FC/FC_CFCKTDCWYZ.js")"></script>
 }
 @section Section_Body {
     <div id="myTabContent" class="div_content">
