--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FC_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FC_ESF.cshtml
@@ -10,13 +10,6 @@
 }
 @section Section_Body {
     <div id="divNav" class="div_nav">
-        <ul class="ul_nav">
-            <li class="li_nav_font">信息小镇</li>
-            <li class="li_nav_split">></li>
-            <li class="li_nav_font">@ViewData["XZQ"]房产信息</li>
-            <li class="li_nav_split">></li>
-            <li class="li_nav_font">@ViewData["XZQ"]二手房</li>
-        </ul>
     </div>
     <div id="divCondition" class="div_condition">
         <ul class="ul_condition_head">
@@ -32,7 +25,7 @@
     </div>
     <div id="divBody" class="div_body">
         <ul class="ul_body_head">
-            <li class="li_body_head">@ViewData["XZQ"]出租</li>
+            <li class="li_body_head"></li>
             <li class="li_body_head">个人房源</li>
             <li class="li_body_head">经纪人</li>
             <li class="li_body_head">热租房源</li>
