--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_SLC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_SLC.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "CL_ZXCDDCSLC";
+    ViewBag.Title = "CL_SLC";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
