--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_GCC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_GCC.cshtml
@@ -115,18 +115,18 @@
             </div>
             <div id="divXSSTip" class="Warn" style="z-index: 990; position: relative;"></div>
         </div>
-        <div id="divGCCCCNX" class="div_row" style="z-index: 989;">
+        <div id="divGCCCCNF" class="div_row" style="z-index: 989;">
             <div class="div_row_left" style="margin-left: 101px;">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">出厂年限</span>
+                <span class="spanFWCZ">出厂年份</span>
             </div>
             <div class="div_row_right">
-                <div id="divCCNXText" class="div_select_out SRK" style="z-index: 997;">
-                    <div id="divCCNXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanCCNX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择出厂年限</span>
+                <div id="divCCNFText" class="div_select_out SRK" style="z-index: 997;">
+                    <div id="divCCNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanCCNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择出厂年份</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divCCNX" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div id="divCCNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
                 <div id="divCCYFText" class="div_select_out SRK" style="z-index: 997;">
@@ -138,7 +138,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divGCCCCNXTip" class="Warn" style="z-index: 988; position: relative;"></div>
+            <div id="divGCCCCNFTip" class="Warn" style="z-index: 988; position: relative;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 987;">
             <div class="div_row_left" style="margin-left: 101px;">
